devops/palinta/palinta-demeter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demeter
  name: demeter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demeter
  template:
    metadata:
      labels:
        app: demeter
    spec:
      containers:
        - image: mszg/palinta-demeter:latest
          name: demeter
          imagePullPolicy: Always
---
