devops/palinta/palinta-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: palinta-generator
  name: palinta-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: palinta-generator
  template:
    metadata:
      labels:
        app: palinta-generator
    spec:
      containers:
        - image: mszg/palinta-generator:latest
          name: palinta-generator
          imagePullPolicy: Always
---
