devops/palinta/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: palinta-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: palinta-api.apps.okd.codespring.ro
    http:
      paths:
      - path: /api/v1/devices
        backend:
          serviceName: palinta-device
          servicePort: 8080
      - path: /api/v1/users
        backend:
          serviceName: palinta-user
          servicePort: 8080
---
